===========================================================================
2014-05-17

* Redrob Remote Control
  - R1A06
  - Added joystick support in applet for Linux x86_64.
      - libJOY R1A02 (release)
      - JNA 4.1.0
  - Applet is now self signed using jarsigner.

===========================================================================

===========================================================================
2014-04-20

* Redrob daemon
  - R1A13
  - Added Raspberry Pi specific status information when
    reporting system statistics.
  - Updated support for executing Linux shell commands.

* Redrob Remote Control
  - R1A05
  - Added Raspberry Pi specific status information when
    presenting system statistics in GUI.

===========================================================================

===========================================================================
2014-03-22

* Redrob daemon
  - R1A12
  - Added support for reporting system statistics.

* Redrob Remote Control
  - R1A04
  - Added support for presenting system statistics in GUI.

===========================================================================

===========================================================================
2014-03-08

* Added Raspberry Pi Camera module (Rev 1.3).

* Replaced consumer 6xAA batteries (NiMH GP 2700 mA) with an integrated
  6 cell battery pack (NiMH 3000 mA). 

* Redrob daemon
  - R1A11
  - Added support for streaming video using RASPIVID and VLC.
  - Default frequency for controller thread is now 10.0 Hz.

* Redrob Remote Control
  - R1A03
  - Now using JDK 7u51 (Oracle).
  - Added control for streaming video.
  - Main thread frequency is now 12.5 Hz.
  - Voltage update time is now 250 ms.
  - Applet is now capable of calling Java script to control HTML page.
  - Updated target simulator.

* HTML
  - Added VLC plugin for reception of streaming video from target.
  - Added Java script for control of VLC plugin.
