@@ -1,4 +1,14 @@
 ===========================================================================
+2014-05-18
+
+* Redrob Remote Control
+  - R1A07
+  - Ignore initial joystick events.
+  - Joystick with "twist" axis can turn right/left using this axis.
+
+===========================================================================
+
+===========================================================================
 2014-05-17
 
 * Redrob Remote Control
